--- a/images/nodeCarbon-python3.4
+++ b/images/nodeCarbon-python3.4
@@ -1,3 +1,6 @@
-FROM circleci/node:carbon
+FROM node:carbon
 
-RUN sudo apt-get update && sudo apt-get install -y python3.4 build-essential libsqlite3-dev zlib1g-dev
+RUN apt-get update && apt-get install -y python3.4 build-essential libsqlite3-dev zlib1g-dev && \
+  git clone https://github.com/mapbox/tippecanoe.git && \
+  cd tippecanoe && make && make install
+
